RESOLVED FIXED10736
XMLHttpRequest.responseXML should be null on error
https://bugs.webkit.org/show_bug.cgi?id=10736
Summary XMLHttpRequest.responseXML should be null on error
Alexey Proskuryakov
Reported 2006-09-04 21:53:21 PDT
Draft XHR spec says that responseXML must be null if parsing the response fails. But both Firefox and Safari put descriptive error documents there, with our one even being HTML. WinIE initializes responseXML to an empty document, and keeps it empty after an error. So, the spec doesn't seem to match any major browser, but it still makes sense to me.
Attachments
proposed patch (6.57 KB, patch)
2006-11-12 05:08 PST, Alexey Proskuryakov
mjs: review+
Alexey Proskuryakov
Comment 1 2006-11-12 05:08:33 PST
Created attachment 11494 [details] proposed patch
Darin Adler
Comment 2 2006-11-13 10:51:32 PST
I wonder if this will break any Dashboard widgets. We should test that before landing the change.
Maciej Stachowiak
Comment 3 2006-11-19 21:50:49 PST
Comment on attachment 11494 [details] proposed patch r=me
Alexey Proskuryakov
Comment 4 2006-11-20 12:07:15 PST
Committed revision 17860 ( I assume Maciej's r+ meant that this is OK to land).
Note You need to log in before you can comment on or make changes to this bug.